--- a/style/main.css
+++ b/style/main.css
@@ -7,9 +7,13 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+/* elementos base */
+
 body {
     background: var(--preta);
     font-family: 'Times New Roman', Times, serif;
+    color: white;
 
 }
 
@@ -36,4 +40,53 @@ header nav a {
 header nav a:hover {
     color: #fff;
 }
+
+/*filme principal*/
     
+.filme-principal {
+    font-size: 16px;
+    background: linear-gradient(rgba(0,0,0,.50), rgba(0,0,0,.50)100%), url('/img/Loki2.jpg');
+
+    height: 500px;
+    background-size: cover;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+
+}
+.filme-principal .descricao {
+    margin-bottom: 90px;
+    margin-right: 900px;
+    text-align: justify;
+    margin-top: 10px;
+
+}
+.filme-principal .titulo {
+    margin-top: 8%;
+    font-size: 40px;
+    font-family: 'Trebuchet MS',  Arial, sans-serif;
+}
+.botao {
+    background-color: rgba(0,0,0,.50);
+    border: none;
+    color: white;
+
+    padding: 15px 30px;
+    margin-right: 15px;
+    font-size: 12px;
+
+    cursor: pointer;
+    transition: .3s ease all;
+
+}
+.botao:hover {
+    background-color: white;
+    color: black;
+
+}
+.botao i {
+    margin-right: 8px;
+}
+
