--- a/style/main.css
+++ b/style/main.css
@@ -58,7 +58,6 @@ header nav a:hover {
 }
 .filme-principal .descricao {
     margin-bottom: 90px;
-    margin-right: 900px;
     text-align: justify;
     margin-top: 10px;
 
@@ -90,3 +89,10 @@ header nav a:hover {
     margin-right: 8px;
 }
 
+.container {
+    margin-left: 20px;
+}
+
+.filme-principal .container {
+   width: 70%;
+}
