--- a/Halloween/halloween.css
+++ b/Halloween/halloween.css
@@ -1,5 +1,5 @@
 :root {
-   --vermelho: #E50914;
+   --vermelho: #FF4500 ;
    --preta: #141414;
 }
 * {
@@ -27,8 +27,8 @@ header .container {
 header .logo {
     margin-left: 5px;
     color: var(--vermelho);
-    font-family: 'Arial Black';
-    font-size: 40px;
+    font-family: 'Creepster', cursive;
+    font-size: 45px;
 
 }
 header nav a {
@@ -44,8 +44,8 @@ header nav a:hover {
 /*filme principal*/
     
 .filme-principal {
-    font-size: 16px;
-    background: linear-gradient(rgba(0,0,0,.50), rgba(0,0,0,.50)100%), url('/img/Loki2.jpg');
+    font-size: 18px;
+    background: linear-gradient(rgba(0, 0, 0, 0.397), rgba(0, 0, 0, 0.397)100%), url('/img/h1.jpg');
 
     height: 500px;
     background-size: cover;
@@ -57,9 +57,10 @@ header nav a:hover {
 
 }
 .filme-principal .descricao {
-    margin-bottom: 90px;
+    margin-bottom: 70px;
     text-align: justify;
     margin-top: 10px;
+    width: 40%;
 
 }
 .filme-principal .titulo {
@@ -74,6 +75,7 @@ header nav a:hover {
 
     padding: 15px 30px;
     margin-right: 15px;
+    margin-bottom: 40px;
     font-size: 12px;
 
     cursor: pointer;
@@ -94,7 +96,7 @@ header nav a:hover {
 }
 
 .filme-principal .container {
-   width: 70%;
+   width: 95%;
 }
 
 .box-filme {
@@ -108,7 +110,7 @@ header nav a:hover {
 }
 
 .spider {
-    background-color: rgba(0,0,0,.50);
+    background-color: #141414;
     border: none;
     color: white;
 
@@ -121,5 +123,5 @@ header nav a:hover {
 }
 .spider:hover {
     background-color:#ff4500;
-    color: rgba(0, 0, 0, .50);
+    color: black;
 }
