--- a/style/main.css
+++ b/style/main.css
@@ -108,7 +108,7 @@ header nav a:hover {
 }
 
 .spider {
-    background-color: rgba(0,0,0,.50);
+    background-color: var(--preta);
     border: none;
     color: white;
 
@@ -121,5 +121,5 @@ header nav a:hover {
 }
 .spider:hover {
     background-color:#ff4500;
-    color: rgba(0, 0, 0, .50);
+    color: var(--preta);
 }
