--- a/Halloween/responsiveh.css
+++ b/Halloween/responsiveh.css
@@ -1,11 +1,18 @@
 @media screen and (max-width: 700px) {
     header .container {
+        display: flex;
         flex-direction: column;
     }
-    .botao {
-        margin-top: 5px;
-        width: 300px
+
+    .filme-principal .descricao {
+        width: 90%;
+        margin-bottom: 30px;
     }
+    .botao {
+        margin: 5px;
+        width: 300px;
+    }
+  
 }
 
 @media screen and (min-width:1000px) {
